// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component OfflineSnackbar renderMessage returns expected message 1`] = `
<WithStyles(ForwardRef(Grid))
  alignContent="center"
  alignItems="center"
  container={true}
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={true}
  />
  <WithStyles(ForwardRef(Grid))
    item={true}
    style={
      Object {
        "marginRight": 24,
      }
    }
  >
    icon
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    message
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={true}
  />
</WithStyles(ForwardRef(Grid))>
`;

exports[`Component OfflineSnackbar renders back online snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(ForwardRef(Snackbar))
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message={
      <WithStyles(ForwardRef(Grid))
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Memo />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          Your connection is back online
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
      </WithStyles(ForwardRef(Grid))>
    }
    onClose={[Function]}
    open={true}
  />
</div>
`;

exports[`Component OfflineSnackbar renders hidden (open: false) snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(ForwardRef(Snackbar))
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message={
      <WithStyles(ForwardRef(Grid))
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Memo />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          Your connection is back online
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
      </WithStyles(ForwardRef(Grid))>
    }
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component OfflineSnackbar renders offline snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(ForwardRef(Snackbar))
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={null}
    message={
      <WithStyles(ForwardRef(Grid))
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Memo />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          Your connection is offline
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
      </WithStyles(ForwardRef(Grid))>
    }
    onClose={[Function]}
    open={true}
  />
</div>
`;

exports[`Component OfflineSnackbar should have a proper style generator 1`] = `
Object {
  "error": Object {
    "color": "test2",
  },
  "success": Object {
    "color": "test1",
  },
}
`;

exports[`Component OfflineSnackbar should have a proper style generator 2`] = `
Object {
  "error": Object {
    "color": undefined,
  },
  "success": Object {
    "color": undefined,
  },
}
`;

exports[`Component OfflineSnackbar should have a proper style generator 3`] = `
Object {
  "error": Object {
    "color": undefined,
  },
  "success": Object {
    "color": undefined,
  },
}
`;
